--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "puzzle-game-in-react",
+  "name": "react-puzzle",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -8,6 +8,8 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "7.1.3",
+    "react-router": "5.1.2",
+    "react-router-dom": "5.1.2",
     "react-scripts": "3.0.1",
     "redux": "4.0.5",
     "styled-components": "4.4.1",
