--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "react-puzzle",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple puzzle game with different modes implemented in React.js",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@types/react-router": "5.1.2",
+    "@types/react-router-dom": "5.1.2",
+    "date-fns": "2.8.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "7.1.3",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.0.1",
+    "react-spring": "8.0.27",
     "redux": "4.0.5",
     "styled-components": "4.4.1",
     "uuid": "3.3.3"
